# undp-brand-yml

./: .gitignore  .nojekyll  LICENSE  Makefile  README.md  build.py  main.html  main.md  main.qmd  pyproject.toml  robots.txt  search.json  sitemap.xml
.github/workflows/: publish.yml
site_libs/bootstrap/: bootstrap-0215d242f0f50df4169358e62b6b083f.min.css  bootstrap-d2d92ef1d006e362bf561c218ee228da.min.css
site_libs/quarto-html/: quarto-syntax-highlighting-d2d0fb4817676b0c2e1b1cbbee61d139.css
tests/: test_brand.py
undp_brand_yml/: __init__.py  __main__.py  _brand.py  _brand.yml
undp_brand_yml/plotting/: __init__.py  plotly_themes.py
