[project]
name = "undp-brand-yml"
version = "0.1.0"
description = "A utility package that provides `brand.yml` definition for applying UNDP-branded styling in Shiny and Quarto projects."
authors = [
    {name = "Mykola Skrynnyk"}
]
license = {text = "BSD-3-Clause"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
