[project]
name = "undp-brand-yml"
version = "0.1.1"
description = "A utility package that provides `brand.yml` definition for applying UNDP-branded styling in Shiny and Quarto projects."
authors = [
    {name = "Mykola Skrynnyk"}
]
license = {text = "BSD-3-Clause"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "brand-yml (>=0.1.1,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.7"
black = "^25.1.0"
isort = "^6.0.1"
pytest = "^8.4.1"

